<resources>
    <string name="app_name">UniGoApp</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>

    <!-- Modos -->
    <string name="mode_walk">Modo a pie</string>
    <string name="mode_bike">Modo bicicleta</string>
    <string name="mode_bus">Modo autobús</string>

    <!-- Clave de API -->
    <string name="google_maps_key">AIzaSyBzIxbSmofOmbHwpqfUkKcRrey2Z5bfwQ4</string>

    <!-- Inicio -->
    <string name="selecciona_un_modo_de_transporte">Selecciona un modo de transporte</string>
    <string name="a_pie">🚶 A pie</string>
    <string name="en_bicicleta">🚴 En bicicleta</string>
    <string name="en_autobus">🚌 En autobús</string>
    <string name="bienvenida_inicio">📍 Bienvenido a UniGo. Te ayudamos a llegar al campus de Álava desde cualquier punto de Vitoria-Gasteiz.</string>

    <!-- Ajustes -->
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="borrar_preferencias">Borrar preferencias</string>
    <string name="modo_preferido">Modo preferido:</string>

    <!-- Bus -->
    <string name="ver_lineas_al_campus">Ver líneas al campus</string>
    <string name="paradas_cercanas_al_campus">Paradas cercanas al campus</string>

    <!-- Login -->
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contraseña">Contraseña</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrarse">Registrarse</string>

    <!-- Registro -->
    <string name="register_title">Crear cuenta UniGo</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="hint_age">Edad</string>
    <string name="select_profile_picture">Seleccionar foto de perfil</string>
    <string name="register">Registrarse</string>

    <!-- Perfil -->
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="ruta_desde_ubicacion_actual">Ruta desde ubicación actual</string>
    <string name="desc_imagen_perfil">Imagen de perfil del usuario</string>
    <string name="titulo_perfil">Perfil del usuario</string>
    <string name="hint_nombre">Nombre</string>

    <string name="btn_guardar">Guardar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="sesion_cerrada">Sesión cerrada correctamente</string>

    <!-- Arrays -->
    <string-array name="study_options">
        <item>Grado</item>
        <item>Máster</item>
        <item>Doctorado</item>
        <item>Intercambio</item>
    </string-array>

    <string-array name="transport_options">
        <item>🚶 A pie</item>
        <item>🚴 En bicicleta</item>
        <item>🚌 En autobús</item>
    </string-array>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="idioma_actual">Idioma actual:</string>
    <string name="selecciona_idioma">Selecciona un idioma</string>
    <string name="selecciona_un_modo_de_transporte_bottom">Selecciona un modo de transporte</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="parada">Parada</string>
    <string name="añadir_a_favoritos">⭐ Añadir a favoritos</string>
    <string name="dialogo_bicicleta">Se ha calculado una ruta en bici según Google Maps.\n\nLos carriles bici están marcados en rojo.\nÚsalos siempre que sea posible para una ruta más segura.</string>
    <string name="ver_paradas_cercanas">🔍 Ver paradas cercanas</string>
    <string name="buscar_rutas_al_campus_desde_aqu">Buscar rutas al campus desde aquí</string>
    <string name="informaci_n_til_para_moverte_por_vitoria_gasteiz">Información útil para moverte por Vitoria-Gasteiz</string>
    <string name="accede_a_recursos_oficiales_para_planificar_mejor_tu_trayecto_al_campus_de_lava">Accede a recursos oficiales para planificar mejor tu trayecto al campus de Álava.</string>
    <string name="mapa_de_carriles_bici">Mapa de carriles bici</string>
    <string name="informaci_n_de_transporte_p_blico">Información de transporte público</string>
    <string name="mensaje_bienvenida">📍 Bienvenido a UniGo\nTe ayudamos a llegar al campus de Álava desde cualquier punto de Vitoria-Gasteiz.</string>
    <string name="ir_con_google_maps">Ir con Google Maps</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="l_neas">Líneas: ...</string>
    <string name="pr_ximos">Próximos: ...</string>
    <string name="actualizar_ahora">🔄 Actualizar ahora</string>
    <string name="modo">Modo:</string>
    <string name="ir_al_campus">Ir al campus</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="mapa_bus">Mapa bus</string>
    <string name="paradas_favoritas">Paradas favoritas</string>
    <string name="informaci_n">Información</string>
    <string name="ajustes">Ajustes</string>


</resources>
