<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/texto_modo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_preferido"
        android:textSize="18sp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/boton_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrar_preferencias" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginVertical="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_oscuro"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <Switch
        android:id="@+id/switch_modo_oscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>
