<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="#FAFAFA">

    <TextView
        android:text="Bienvenido a UniGo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#2C2C2C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/input_email"
        android:hint="Correo electrónico"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:padding="12dp" />

    <EditText
        android:id="@+id/input_password"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/iniciar_sesi_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#1976D2"
        android:textColor="#FFFFFF" />

    <TextView
        android:text="@string/no_tienes_cuenta"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        android:textColor="#555555"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_go_register"
        android:text="@string/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#43A047"
        android:textColor="#FFFFFF"/>

</LinearLayout>
